<resources>
    <string name="app_name">ICD10 Billing</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_icddetail">Code Details</string>
    <string name="icd10Label">ICD10</string>
    <string name="icd9Label">ICD9</string>
    <string name="icdDescriptionLabel">Description</string>

    <string name="search_hint">Search Codes</string>
    <string name="title_activity_search_codes">Search Results</string>
    <string name="action_search">Action Search</string>

    <string name="date_hint">Date</string>
    <string name="patient_name_hint">Patient Name</string>
    <string name="date_of_birth_hint">Date Of Birth</string>
    <string name="admin_doctor_hint">Admin Doctor</string>
    <string name="referring_doctor_hint">Referring Doctor</string>
    <string name="room_hint">Room</string>
    <string name="site_hint">Site</string>
    <string name="cpt_code_hint">CPT</string>
    <string name="pc_code_hint">Procedure</string>
    <string name="mc_code_hint">Medicare</string>
    <string name="customVisitCodeString">Insert Custom Visit Code</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="addDoctor">Add Doctor</string>
    <string name="addPatient">Add Patient</string>

</resources>
