<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".BillActivity">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >


            <AutoCompleteTextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/autocomplete_date"
                android:hint="@string/date_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <AutoCompleteTextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/autocomplete_patient"
                android:hint="@string/patient_name_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <AutoCompleteTextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/autocomplete_date_of_birth"
                android:hint="@string/date_of_birth_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <AutoCompleteTextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/autocomplete_referring_doctor"
                android:hint="@string/referring_doctor_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <AutoCompleteTextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/autocomplete_site"
                android:hint="@string/site_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <AutoCompleteTextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/autocomplete_room"
                android:hint="@string/room_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <AutoCompleteTextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/autocomplete_cpt_code"
                android:hint="@string/cpt_code_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <AutoCompleteTextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/autocomplete_pc_code"
                android:hint="@string/pc_code_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <AutoCompleteTextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/autocomplete_mc_code"
                android:hint="@string/mc_code_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customVisitCodeString"
                android:id="@+id/customVisitCodeButton" />

            <GridView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:id="@+id/visitCodeGridView"
                android:layout_below="@+id/scrollView"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:id="@+id/saveButton" />




        </LinearLayout>

    </ScrollView>



</RelativeLayout>
